--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,37 @@
     <title>Country Search</title>
 </head>
 <body>
-<h1>Country search</h1>
+<h1>Country Search</h1>
+<form action="#" th:action="@{/}" th:object="${searchRequest}" method="post">
+    <h2>Search by:</h2>
+    <table>
+        <tr>
+            <td>
+                <label for="country_name">Name</label>
+            </td>
+            <td>
+                <input id="country_name" type="radio" th:field="*{type}" value="COUNTRY_NAME"/>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label for="full_name">Full Name</label>
+            </td>
+            <td>
+                <input id="full_name" type="radio" th:field="*{type}" value="FULL_NAME"/>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label for="code">Code</label>
+            </td>
+            <td>
+                <input id="code" type="radio" th:field="*{type}" value="CODE"/>
+            </td>
+        </tr>
+    </table>
+    <input type="text" th:field="*{value}"/>
+    <p><input type="submit" value="Search"/>
+</form>
 </body>
 </html>
