--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -8,21 +8,26 @@ img {
     width: 50px;
 }
 
-#results {
+table {
   border-collapse: collapse;
   width: 100%;
 }
 
-#results td, #results th {
+.statistics {
+    width: 250px;
+    margin: 30px 0px 50px 0px;
+}
+
+td, th {
   border: 1px solid #ddd;
   padding: 8px;
 }
 
-#results tr:nth-child(even){background-color: #f2f2f2;}
+tr:nth-child(even){background-color: #f2f2f2;}
 
-#results tr:hover {background-color: #ddd;}
+tr:hover {background-color: #ddd;}
 
-#results th {
+th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
